--- a/styles/languages/go.less
+++ b/styles/languages/go.less
@@ -1,131 +1,26 @@
 /*
-+++++++++++++++++++++++++++++++++++++++++++
-title     Language Go                     +
-project   northem-dark-atom-syntax        +
-file      go.less                         +
-version   0.21.0                          +
-author    Arctic Ice Studio               +
-email     development@arcticicestudio.com +
-website   http://arcticicestudio.com      +
-copyright Copyright (C) 2016              +
-+++++++++++++++++++++++++++++++++++++++++++
+++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++
+title      Language Go Styles                                          +
+project    northem-dark-atom-syntax                                    +
+repository https://github.com/arcticicestudio/northem-dark-atom-syntax +
+author     Arctic Ice Studio                                           +
+email      development@arcticicestudio.com                             +
+copyright  Copyright (C) 2016                                          +
+++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++
 
-Defines all language specific syntax highlighting classes for "Go".
+[Language Packages]
+  > language-go (https://atom.io/packages/language-go)
 
-[Index]
-  > Comment
-  > Constant
-  > Entity
-  > Keyword
-  > Punctuation
-  > Support
-  > Storage
-  > String
-  > Variable
-
-[Dependencies]
-  > language-go
-      https://atom.io/packages/language-go
+[References]
+Go
+  (https://golang.org)
 */
 .source.go {
-  color: @color-syntax-other;
-  /*+---------+
-    + Comment +
-    +---------+*/
-  .comment {
-    color: @color-syntax-comment;
+  .entity.name.package {
+    color: @syntax-color-import;
   }
 
-  /*+----------+
-    + Constant +
-    +----------+*/
-  .constant {
-    &.character.escape {
-      color: @color-syntax-escape;
-    }
-    &.other.placeholder {
-      color: @color-syntax-string;
-      font-style: italic;
-    }
-    &.language {
-      color: @color-syntax-keyword;
-    }
-    &.numeric {
-      color: @color-syntax-number;
-    }
-  }
-
-  /*+--------+
-    + Entity +
-    +--------+*/
-  .entity.name.function {
-    color: @color-syntax-function;
-  }
-
-  /*+---------+
-    + Keyword +
-    +---------+*/
-  .keyword {
-    color: @color-syntax-keyword;
-
-    &.package,
-    &.import {
-      color: @color-syntax-import;
-      font-weight: bold;
-    }
-    &.operator {
-      color: @color-syntax-operator;
-    }
-  }
-
-  /*+-------------+
-    + Punctuation +
-    +------------+*/
-  .punctuation {
-    &.definition.string {
-      &.begin,
-      &.end {
-        color: @color-syntax-symbol;
-      }
-    }
-    &.other {
-      &.bracket,
-      &.comma,
-      &.period {
-        color: @color-syntax-symbol;
-      }
-    }
-  }
-
-  /*+---------+
-    + Support +
-    +---------+*/
-  .support.function {
-    color: @color-syntax-function;
-  }
-
-  /*+---------+
-    + Storage +
-    +---------+*/
-  .storage.type {
-    color: @color-syntax-class;
-
-    &.class.todo {
-      color: @color-syntax-go-todo;
-    }
-  }
-
-  /*+---------+
-    + Storage +
-    +---------+*/
-  .string.quoted {
-    color: @color-syntax-string;
-  }
-
-  /*+----------+
-    + Variable +
-    +----------+*/
-  .variable.other {
-    color: @color-syntax-variable;
+  .storage.type.string {
+      color: @syntax-color-class;
   }
 }
