--- a/styles/languages/julia.less
+++ b/styles/languages/julia.less
@@ -1,127 +1,22 @@
 /*
-+++++++++++++++++++++++++++++++++++++++++++
-title     Language "Julia"                +
-project   northem-dark-atom-syntax        +
-file      julia.less                      +
-version   0.21.0                          +
-author    Arctic Ice Studio               +
-email     development@arcticicestudio.com +
-website   http://arcticicestudio.com      +
-copyright Copyright (C) 2016              +
-+++++++++++++++++++++++++++++++++++++++++++
+++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++
+title      Language Julia Styles                                       +
+project    northem-dark-atom-syntax                                    +
+repository https://github.com/arcticicestudio/northem-dark-atom-syntax +
+author     Arctic Ice Studio                                           +
+email      development@arcticicestudio.com                             +
+copyright  Copyright (C) 2016                                          +
+++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++
 
-Defines all language specific syntax highlighting classes for "Julia".
+[Language Packages]
+  > language-julia (https://atom.io/packages/language-julia)
 
-[Index]
-  > Bracket
-  > Comment
-  > Constant
-  > Entity
-  > Keyword
-  > Punctuation
-  > Support
-  > Storage
-  > String
-
-[Atom Package Dependencies]
-  > language-julia
-      https://atom.io/packages/language-julia
+[References]
+Julia Language
+  (http://julialang.org)
 */
 .source.julia {
-  color: @color-syntax-other;
-  /*+---------+
-    + Bracket +
-    +---------+*/
-  .bracket {
-    color: @color-syntax-symbol;
-  }
-
-  /*+---------+
-    + Comment +
-    +---------+*/
-  .comment {
-    color: @color-syntax-comment;
-  }
-
-  /*+----------+
-    + Constant +
-    +----------+*/
-  .constant {
-    &.numeric {
-      color: @color-syntax-number;
-    }
-    &.character.escape {
-      color: @color-syntax-escape;
-    }
-    &.language {
-      color: @color-syntax-constant;
-    }
-  }
-
-  /*+--------+
-    + Entity +
-    +--------+*/
-  .entity.name.function {
-    color: @color-syntax-function;
-  }
-
-  /*+---------+
-    + Keyword +
-    +---------+*/
-  .keyword {
-    &.other,
-    &.control {
-      color: @color-syntax-keyword;
-    }
-    &.operator {
-      &.ternary,
-      &.arithmetic,
-      &.update {
-        color: @color-syntax-operator;
-      }
-    }
-  }
-
-  /*+-------------+
-    + Punctuation +
-    +-------------+*/
-  .punctuation.definition {
-    &.commment {
-      color: @color-syntax-comment;
-    }
-    &.string {
-      &.begin,
-      &.end {
-        color: @color-syntax-symbol;
-      }
-    }
-  }
-
-  /*+---------+
-    + Support +
-    +---------+*/
-  .support.function {
-    color: @color-syntax-function;
-
-    &.macro {
-      font-weight: bold;
-    }
-  }
-
-  /*+---------+
-    + Storage +
-    +---------+*/
-  .storage.type {
-    color: @color-syntax-type;
-  }
-
-  /*+--------+
-    + String +
-    +--------+*/
-  .string.qouted {
-    &.single,
-    &.double {
-      color: @color-syntax-string;
-    }
+  .support.function.macro {
+    color: @syntax-color-annotation;
   }
 }
