--- a/styles/languages/lesscss.less
+++ b/styles/languages/lesscss.less
@@ -1,168 +1,22 @@
 /*
-+++++++++++++++++++++++++++++++++++++++++++
-title     Language "LESSCSS"              +
-project   northem-dark-atom-syntax        +
-file      lesscss.less                    +
-version   0.21.0                          +
-author    Arctic Ice Studio               +
-email     development@arcticicestudio.com +
-website   http://arcticicestudio.com      +
-copyright Copyright (C) 2016              +
-+++++++++++++++++++++++++++++++++++++++++++
+++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++
+title      Language LESSCSS Styles                                     +
+project    northem-dark-atom-syntax                                    +
+repository https://github.com/arcticicestudio/northem-dark-atom-syntax +
+author     Arctic Ice Studio                                           +
+email      development@arcticicestudio.com                             +
+copyright  Copyright (C) 2016                                          +
+++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++
 
-Defines all language specific syntax highlighting classes for "LESSCSS".
+[Language Packages]
+  > language-less (https://atom.io/packages/language-less)
 
-[Index]
-  > Comment
-  > Constant
-  > Entity
-  > Keyword
-  > Meta
-  > Punctuation
-  > Support
-  > String
-  > Variable
-
-[Atom Package Dependencies]
-  > language-less
-      https://atom.io/packages/language-less
+[References]
+LESSCSS
+  (http://lesscss.org)
 */
-.source.less {
-  color: @color-syntax-other;
-  /*+---------+
-    + Comment +
-    +---------+*/
-  .comment {
-    color: @color-syntax-comment;
-  }
-
-  /*+----------+
-    + Constant +
-    +----------+*/
-  .constant {
-    color: @color-syntax-constant;
-    font-weight: bold;
-
-    &.numeric,
-    &.other.rgb-value {
-      color: @color-syntax-number;
-      font-weight: normal;
-    }
-  }
-
-  /*+--------+
-    + Entity +
-    +--------+*/
-  .entity.other.attribute-name {
-    &.class,
-    &.id {
-      color: @color-syntax-class;
-    }
-  }
-
-  /*+---------+
-    + Keyword +
-    +---------+*/
-  .keyword {
-    &.operator {
-      color: @color-syntax-operator;
-    }
-    &.control {
-      color: @color-syntax-function;
-
-      &.at-rule {
-        &.fontface,
-        &.import,
-        &.page,
-        &.media {
-          color: @color-syntax-css-at-rule;
-          font-weight: bold;
-        }
-      }
-      &.logical.operator {
-        color: @color-syntax-operator;
-      }
-    }
-    &.other {
-      color: @color-syntax-keyword;
-
-      &.unit {
-        color: @color-syntax-unit;
-      }
-    }
-  }
-
-  /*+------+
-    + Meta +
-    +------+*/
-  .meta {
-    &.property-list {
-      color: @color-syntax-keyword;
-    }
-    &.brace {
-      color: @color-syntax-symbol;
-    }
-  }
-
-  /*+-------------+
-    + Punctuation +
-    +-------------+*/
-  .punctuation {
-    &.terminator,
-    &.seperator,
-    &.section.property-list {
-      color: @color-syntax-symbol;
-    }
-    &.definition {
-      &.comment {
-        color: @color-syntax-comment;
-      }
-      &.keyword {
-        color: @color-syntax-keyword;
-        font-weight: normal;
-      }
-      &.entity,
-      &.string {
-        color: @color-syntax-symbol;
-      }
-    }
-  }
-
-  /*+---------+
-    + Support +
-    +---------+*/
-  .support {
-    &.type.property-name {
-      color: @color-syntax-keyword;
-    }
-    &.function {
-      color: @color-syntax-function;
-
-      &.any-method.builtin {
-        color: @color-syntax-function;
-      }
-    }
-    &.constant.color.w3c-standard-color-name {
-      color: @color-syntax-constant;
-      font-weight: bold;
-    }
-  }
-
-  /*+--------+
-    + String +
-    +--------+*/
-  .string {
-    color: @color-syntax-string;
-  }
-
-  /*+----------+
-    + Variable +
-    +----------+*/
-  .variable {
-    color: @color-syntax-variable;
-
-    &.other {
-      color: @color-syntax-variable;
-    }
+.source.css.less {
+  .mixin {
+    color: @syntax-color-function;
   }
 }
